--- a/src/assets/i18n/el.json
+++ b/src/assets/i18n/el.json
@@ -1,3 +1,9 @@
 {
-
+  "reviews-create-questionnaire": {
+    "questionnaire-management": "Διαχείριση Ερωτηματολογίου",
+    "create-question": "Δημιουργία Ερώτησης",
+    "write-question": "Γράψε την Ερώτηση",
+    "mandatory-question": "Υποχρεωτικη Ερώτηση",
+    "select-type": "Επιλέξτε Τύπο Ερώτησης"
+  }
 }
