--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,7 +3,7 @@
     "questionnaire-management": "Διαχείριση Ερωτηματολογίου",
     "create-question": "Δημιουργία Ερώτησης",
     "write-question": "Γράψε την Ερώτηση",
-    "mandatory-question": "Υποχρεωτικη Ερώτηση",
+    "mandatory-question": "Υποχρεωτική Ερώτηση",
     "select-type": "Επιλέξτε Τύπο Ερώτησης",
     "stars": "Αστέρια"
   }
