validation in the input of the app

--- a/src/assets/i18n/el.json
+++ b/src/assets/i18n/el.json
@@ -9,7 +9,7 @@
     "text": "Κείμενο",
     "radio": "Μονή Επιλογή",
     "write-answer": "Γράψε τις απαντήσεις",
-    "save-answer" :"Προσθήκη Ερώτησης",
+    "save-question" :"Προσθήκη Ερώτησης",
     "text-question": "Κείμενο Ερώτησης"
   }
 }
