--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,7 +9,7 @@
     "text": "Text",
     "radio": "radio",
     "write-answer": "Write your answers",
-    "save-answer" :"Save Question"
+    "save-question" :"Save Question"
 
   }
 }
