--- a/src/assets/i18n/el.json
+++ b/src/assets/i18n/el.json
@@ -9,14 +9,14 @@
     "text": "Κείμενο",
     "radio": "Μονή Επιλογή",
     "write-answer": "Γράψε τις απαντήσεις.",
-    "save-question" :"Προσθήκη Ερώτησης",
+    "save-question" :"Προσθηκη Ερωτησης",
     "text-question": "Κείμενο Ερώτησης",
     "please-enter-the-question": "Παρακαλώ εισάγεται την ερώτηση.",
     "radio-button-text-alert": "Παρακαλώ εισάγεται τουλάχιστον μία προκαθορισμένη απάντηση.",
     "edit-question": "Επεξεργασία Ερώτησης",
     "question-text": "Κείμενο Ερώτησης",
     "question-type": "Τύπος Ερώτησης",
-    "confirm": "Επιβεβαίωση",
+    "confirm": "Επιβεβαιωση",
     "mandatory": "Υποχρεωτική",
     "alert": "Προσοχή",
     "delete-question": "Είστε σίγουρος/η οτι θέλετε να διαγράψετε την ερώτηση;",
