alert in answers

--- a/src/assets/i18n/el.json
+++ b/src/assets/i18n/el.json
@@ -21,7 +21,8 @@
     "alert": "Προσοχή",
     "delete-question": "Είστε σίγουρος/η οτι θέλετε να διαγράψετε την ερώτηση;",
     "cancel" : "Ακύρωση",
-    "yes": "Ναι"
+    "yes": "Ναι",
+    "alert-in-answers": "Δεν υπάρχει μετάφραση στα ελληνικά"
 
   }
 }
