--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -20,7 +20,8 @@
     "alert": "Alert",
     "delete-question": "Are you sure you want to delete this question?",
     "cancel": "Cancel",
-    "yes": "OK"
+    "yes": "OK",
+    "alert-in-answers": "Traslation in English is missing"
 
 
   }
