message in answer

--- a/src/assets/i18n/el.json
+++ b/src/assets/i18n/el.json
@@ -22,7 +22,8 @@
     "delete-question": "Είστε σίγουρος/η οτι θέλετε να διαγράψετε την ερώτηση;",
     "cancel" : "Ακύρωση",
     "yes": "Ναι",
-    "alert-in-answers": "Δεν υπάρχει μετάφραση στα ελληνικά"
+    "alert-in-answers": "Δεν υπάρχει μετάφραση στα ελληνικά",
+    "alert-in-answers2":"Δεν υπάρχει μετάφραση στα αγγλικά"
 
   }
 }
