--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -21,7 +21,8 @@
     "delete-question": "Are you sure you want to delete this question?",
     "cancel": "Cancel",
     "yes": "OK",
-    "alert-in-answers": "Traslation in English is missing"
+    "alert-in-answers": "Traslation in Greek is missing",
+    "alert-in-answers2": "Translation in English is missing"
 
 
   }
