validation in add modal

--- a/src/assets/i18n/el.json
+++ b/src/assets/i18n/el.json
@@ -23,7 +23,8 @@
     "cancel" : "Ακύρωση",
     "yes": "Ναι",
     "alert-in-answers": "Δεν υπάρχει μετάφραση στα ελληνικά",
-    "alert-in-answers2":"Δεν υπάρχει μετάφραση στα αγγλικά"
+    "alert-in-answers2":"Δεν υπάρχει μετάφραση στα αγγλικά",
+    "question-in-greek-is-mandatory": "Η ερώτηση στα ελληνικά είναι υποχρεωτική"
 
   }
 }
