titls in buttons

--- a/src/assets/i18n/el.json
+++ b/src/assets/i18n/el.json
@@ -31,7 +31,8 @@
     "edit-question-btn": "Επεξεργασία Ερώτησης",
     "close": "Κλείσιμο",
     "add-answer": "Πρόσθεσε την απάντηση",
-    "edit-answer-btn": "Επεξεργασία Απάντησης"
+    "edit-answer-btn": "Επεξεργασία Απάντησης",
+    "save-answers":"Επιβεβαίωση Προσθήκης Απαντησης"
 
 
   }
