--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -29,7 +29,8 @@
     "edit-question-btn": "Edit question",
     "edit-answer-btn": "Edit answer",
     "close": "Close",
-    "add-answer": "Add answer"
+    "add-answer": "Add answer",
+    "save-answers":"Confirm edit answer"
 
 
 
