--- a/src/assets/i18n/el.json
+++ b/src/assets/i18n/el.json
@@ -32,7 +32,8 @@
     "close": "Κλείσιμο",
     "add-answer": "Πρόσθεσε την απάντηση",
     "edit-answer-btn": "Επεξεργασία Απάντησης",
-    "save-answers":"Επιβεβαίωση Προσθήκης Απαντησης"
+    "save-answers":"Επιβεβαίωση Προσθήκης Απαντησης",
+    "save-changes": "Οι αλλαγές αποθηκεύτηκαν επιτυχώς "
 
 
   }
