--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -30,7 +30,8 @@
     "edit-answer-btn": "Edit answer",
     "close": "Close",
     "add-answer": "Add answer",
-    "save-answers":"Confirm edit answer"
+    "save-answers":"Confirm edit answer",
+    "save-changes": "Your changes saved successfully"
 
 
 
